Fixed jobs cards leaving a margin to the right on mobile devices

--- a/src/index.css
+++ b/src/index.css
@@ -19,6 +19,7 @@
 #myNav {
   background: #242933;
   width: 100vw;
+  height: 10vh;
 }
 
 .hero {
@@ -28,16 +29,17 @@
   background: linear-gradient(to right, #191654, #43C6AC); 
   
   width: 100%;
-  height: 100vh;
+  height: 80vh;
 }
 
 .container.is-fluid {
   margin-top: 7em;
+  display: flex;
+  justify-content: space-around;
+  flex-direction: row;
+  flex-wrap: wrap;
 }
 
-/* .colums.is-mobile {
-  margin-top: 7em;
-} */
 
 .card-footer {
   margin-bottom: 20px;
@@ -45,10 +47,13 @@
 }
 
 .footer {
-  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   bottom: 0;
   width: 100%;
   background: #242933;
+  height: auto;
 }
 
 
@@ -66,4 +71,11 @@ a:hover {
 
 #root {
   width: 100vw;
+}
+
+.loader-custom {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 50vh;
 }
